--- a/Flask/templates/uploader.html
+++ b/Flask/templates/uploader.html
@@ -5,9 +5,15 @@
     <title>Uploader</title>
 </head>
 <body>
-<form method="post", enctype="multipart/form-data">
+<script>
+  function alertOnSucsess(){
+    alert("Sucsess");
+    return true;
+  }
+</script>
+<form method="post", enctype="multipart/form-data" onsubmit="return alertOnSucsess()">
     <input type="file", name="file", id="fileToUpload">
-    <input type="submit", value="Upload Image", name="Submit", onsubmit="alert('Uploaded!')">
+    <input type="submit", value="Upload Image", name="Submit">
 </form>
 </body>
 </html>
