--- a/Flask/templates/test_temp.html
+++ b/Flask/templates/test_temp.html
@@ -1,8 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
+    <title>Download</title>
+</head>
 <body>
-<h1>index</h1>
-{% for x in files %}
-<a href="{{ url_for('.download', filename=x) }}"><h3>{{ x }}</h3></a>
-{% endfor %}
+  <div class="box">
+    <h1>Download Files</h1>
+    {% for x in files %}
+    <a href="{{ url_for('.download', filename=x) }}"><p>{{ x }}</p></a>
+    {% endfor %}
+  </div>
+  <a href="/upload">Upload Data</a>
 </body>
 </html>
