--- a/Flask/templates/uploader.html
+++ b/Flask/templates/uploader.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
     <title>Uploader</title>
 </head>
 <body>
-<form method="post", enctype="multipart/form-data">
-    <input type="file", name="file", id="fileToUpload">
-    <input type="submit", value="Upload Image", name="Submit", onsubmit="alert('Uploaded!')">
-</form>
+<script>
+  function alertOnSucsess(){
+    alert("Sucsess");
+    return true;
+  }
+</script>
+<div class="box">
+  <form method="post", enctype="multipart/form-data" onsubmit="return alertOnSucsess()", class="Form">
+      <input type="file", name="file", id="fileToUpload", class="upload">
+      <input type="submit", value="Upload Image", name="Submit", class="sub">
+  </form>
+</div>
+<a href="/downloader">Back</a>
 </body>
 </html>
