--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -15,19 +15,19 @@ h1{
   color: white;
   text-decoration: underline;
 }
-.box{
-  background-color:#0F344D;
-  box-shadow: 0 0 10px black;
-  width: 350px;
-  padding: 30px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+.box {
+    background-color: #0F344D;
+    box-shadow: 0 0 10px black;
+    width: 500px;
+    height: -moz-fit-content;
+    padding: 30px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
-
 .Form{
   margin: 0 auto;
   width:250px;
