--- a/Flask/templates/uploader.html
+++ b/Flask/templates/uploader.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
-    <title>Uploader</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Uploader{% endblock %}
+{% block content %}
 <script>
   function alertOnSucsess(){
     alert("Sucsess");
     return true;
   }
+
 </script>
-<div class="box">
-  <form method="post", enctype="multipart/form-data" onsubmit="return alertOnSucsess()", class="Form">
-      <input type="file", name="file", id="fileToUpload", class="upload">
-      <input type="submit", value="Upload Image", name="Submit", class="sub">
-  </form>
-</div>
-<a href="/download">Back</a>
-<a href="removecookie", style="margin-left: 95%">Logout</a>
-</body>
-</html>
+{% endblock %}
+{% block box %}
+<form method="post" , enctype="multipart/form-data" onsubmit="return alertOnSucsess()" , class="Form">
+    <input type="file" , name="file" , id="fileToUpload" , class="upload">
+    <input type="submit" , value="Upload Image" , name="Submit" , class="sub">
+</form>
+{% endblock %}
